# Self-Balancing

./: .gitignore  README.md  REPORT.md  TRAINING_GUIDE.md  calibrate_actuator.py  calibrate_from_data.py  control.c  export_to_c.py  kl_ppo.py  online_rl.py  online_train.py  plot_log.py  pretrain_bc.py  pyproject.toml  read_bin.py  read_bt.py  real_data_model.npz  ref  test_env.py  train_ppo.py  train_ppo_reg.py  train_residual.py  train_residual_rl.py  visualize.py
WHEELTEC_HAL/Core/Inc/: adc.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h  usart.h
WHEELTEC_HAL/Core/Src/: adc.c  dma.c  gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
WHEELTEC_HAL/MiniBalance/: DataScope_DP.C  ELE_CCD.c  KF.c  MPU6050.c  control.c  filter.c  rl_send.c  show.c
WHEELTEC_HAL/MiniBalance/Inc/: DataScope_DP.h  ELE_CCD.h  KF.h  balance_nn.h  control.h  filter.h  mpu6050.h  rl_send.h  show.h
balancing_robot/: __init__.py  dynamics.py  env.py
