[project]
name = "reinforcementlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.3.0",
    "matplotlib>=3.10.9",
    "pyserial>=3.5",
    "scipy>=1.10.0",
    "stable-baselines3>=2.0",
    "tensorboard>=2.20.0",
]
